Opened 9 years ago

Closed 9 years ago

#12843 closed bug (fixed)

[Patch] DecorManager.cpp: fix comparison between pointer and integer

Reported by: mt Owned by: axeld
Priority: normal Milestone: Unscheduled
Component: Servers/app_server Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

Modify if condition at line 73 [1], since Decorator::AddTab() returns Decorator::Tab* [2]. [1] http://cgit.haiku-os.org/haiku/tree/src/servers/app/decorator/DecorManager.cpp#n73 [2] http://cgit.haiku-os.org/haiku/tree/src/servers/app/decorator/Decorator.cpp#n110

/home/haiku/haiku/haiku/src/servers/app/decorator/DecorManager.cpp:73:54: error: comparison between pointer and integer ('Decorator::Tab *' and 'int')
        if (decorator->AddTab(settings, title, look, flags) == false) {
            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ ^  ~~~~~

Attachments (1)

0033-DecorManager.cpp-fix-comparison-between-pointer-and-.patch (880 bytes ) - added by mt 9 years ago.

Download all attachments as: .zip

Change History (3)

comment:1 by mt, 9 years ago

patch: 01

comment:2 by pulkomandy, 9 years ago

Resolution: fixed
Status: newclosed

Fixed in hrev50402.

Note: See TracTickets for help on using tickets.