DecorManager.cpp: fix comparison between pointer and integer

Signed-off-by: Adrien Destugues <pulkomandy@pulkomandy.tk>
Ticket: #12843